[tool.poetry]
name = "prepare_tool"
version = "0.0.1"
description = "Subsetting tool for OpenFonts.jp"
authors = ["3846masa <3846masahiro+git@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7.4"
fonttools = "^4.0"
brotli = "^1.0"
zopfli = "^0.1.6"
pyyaml = "^5.1"
requests = "^2.22"
pystache = "^0.5.4"
faker = "^2.0"
logzero = "^1.5"
css-html-js-minify = "^2.5"
pydantic = "^1.0b2"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
yapf = "^0.28.0"
mypy = "^0.730.0"

[tool.poetry.scripts]
prepare_tool = "prepare_tool:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
