[tool.poetry]
name = "prepare_tool"
version = "0.0.1"
description = "Subsetting tool for OpenFonts.jp"
authors = ["3846masa <3846masahiro+git@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.4"
fonttools = "^4.16"
brotli = "^1.0"
zopfli = "^0.1.7"
pyyaml = "^5.3"
requests = "^2.24"
pystache = "^0.5.4"
faker = "^4.14"
logzero = "^1.5"
css-html-js-minify = "^2.5"
pydantic = "^1.7"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"
mypy = "^0.790"
flake8 = "^3.8"

[tool.poetry.scripts]
prepare_tool = "prepare_tool:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
